After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 80325 - Cannot re-enable keyboard repeat option
Cannot re-enable keyboard repeat option
Status: VERIFIED FIXED
Product: gnome-control-center
Classification: Core
Component: Keyboard
unspecified
Other Solaris
: High major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 73571 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2002-04-30 10:19 UTC by Shane O'Connor
Modified: 2009-08-15 18:40 UTC
See Also:
GNOME target: ---
GNOME version: 2.0



Description Shane O'Connor 2002-04-30 10:19:33 UTC
Once the keyboard repeat option has been disabled it is not possible to
re-enable this option.


To Recreate
-------------
(1) Start Keyboard capplet - select "Applications->Desktop
Preferences->Keyboard"

(2) Disable the "Keyboard repeats when key is held down" option.

(3) Check this works - press and hold down key => key is not repeated.

(4) Re-enable the "Keyboard repeats when key is held down" option.

(5) Check - press and hold down key => key is NOT repeated.
Comment 1 Jonathan Blandford 2002-05-13 21:41:34 UTC
This appears to work.  Is this a Sun X-server problem?  If it still is
broken for you, we'll try to narrow it down more.  Otherwise, please
close it.
Comment 2 Shane O'Connor 2002-05-14 08:54:48 UTC
This is still a problem for me on a build from source taken on May
13th. This bug is tied into bug #73571 - I have asked sun for the
following information, as requested in bug #73571

The following is taken from comments to bug #73571:
"There are apparently several mechanisms for setting the autorepeat
rate and delay.
- xfree86 extensions
- XKB
- Solaris accessx extension seems to have one

CVS currently uses the same scheme used in xfree86 for the xset
command.  If
XKB is available use it, else fallback to xfree86 extension if
available. Can we have a look at the source for solaris' xset command
to see how they do it on that platform ?"
Comment 3 Shane O'Connor 2002-05-14 08:55:09 UTC
*** Bug 73571 has been marked as a duplicate of this bug. ***
Comment 4 Shane O'Connor 2002-05-14 13:57:45 UTC
This is a solaris problem and I believe a patch is being worked on in
sun.
Comment 5 Jody Goldberg 2002-05-14 14:13:58 UTC
They are definitely working on fixing XKB.  I worry that there will be breakage
for people running unpatched solaris x servers.  Sadly, supporting the old
accessX methods that appear to work on solaris require compiling against some X
server headers that are not installed in user space.
Comment 6 Erwann Chenede 2002-05-14 16:13:50 UTC
Hi here is how xset on solaris does it :

set_repeat(dpy, key, auto_repeat_mode)
Display *dpy;
int key, auto_repeat_mode;
{
  XKeyboardControl values;
  values.auto_repeat_mode = auto_repeat_mode;
  if (key != ALL) {
    values.key = key;
    XChangeKeyboardControl(dpy, KBKey | KBAutoRepeatMode, &values);
  }
  else {
    XChangeKeyboardControl(dpy, KBAutoRepeatMode, &values);
  }
  return;
}

HTH
Comment 7 Luis Villa 2002-05-15 18:29:51 UTC
Jody, is this info useful and/or within the scope of what we're
expected to do?
Comment 8 Jody Goldberg 2002-05-17 03:34:13 UTC
Doh!  I was completely overthinking this.
I'll bet that if you ran the settings daemon from a terminal you 
would see a warning :-)

When we were unable to set the autorepeat rate because the platform 
did not support it we were turning autorepeat off.

Fixed in CVS.
Comment 9 Jody Goldberg 2002-05-17 03:35:41 UTC
*** Bug 78013 has been marked as a duplicate of this bug. ***
Comment 10 Avirupa Chakrabarty 2002-05-17 10:49:51 UTC
The bug still persists in Solaris. I tested it on the source code 
taken on 14th of May.
Comment 11 Jody Goldberg 2002-05-17 12:17:53 UTC
Given that I did not fix it until the 16th that is not surprising :-)
Comment 12 Shane O'Connor 2002-05-22 13:57:06 UTC
verified fixed in source taken 22nd may - cheers jody
Comment 13 Shane O'Connor 2002-05-22 13:57:23 UTC
closing
Comment 14 Anand 2002-06-14 08:48:38 UTC
I'm seeing this problem again on Solaris 8 and 9, 13th June CVS 
sources. The "Delay before repeat" and "Repeat speed" just don't work 
for me. 

Here is the xset -q output for two particular scenarios.

1) Delay before repeating: Very short
Repeat speed: Slow
---------------------------
Keyboard Control:
  auto repeat:  on    key click percent:  0    LED mask:  00000000
  auto repeating keys:  00faaf8becff67f2
                        ff7bf0ff1ff89f03
                        1900000000000000
                        0000000000000000
  bell percent:  50    bell pitch:  400    bell duration:  100

2) Delay before repeating: Long
Repeat speed very: Fast
----------------------------
Keyboard Control:
  auto repeat:  on    key click percent:  0    LED mask:  00000000
  auto repeating keys:  00faaf8becff67f2
                        ff7bf0ff1ff89f03
                        1900000000000000
                        0000000000000000
  bell percent:  50    bell pitch:  400    bell duration:  100


Shane, do you see this problem? Can this bug be reopened?

Or else, am i missing out some setting?

(Adding CC to me and gnome-bugs@wipro.com)
Comment 15 Shane O'Connor 2002-06-14 09:37:57 UTC
heya anand,

i'm also seeing a problem with "repeat speed" for keyboard repeat but
this is a different bug (this particular bug is for "keyboard repeat"
option not working and not the "repeat speed" slider) - there is a bug
logged for this - have a look at bug #83174. 

cheers
shane
Comment 16 Jody Goldberg 2002-06-14 17:11:22 UTC
This is also an X server issue.  We do not support using the sun AccessX
extension to handle repeat speeds.  You need to enable the XKB extension.