http://bugzilla.gnome.org/show_bug.cgi?id=80325 although we may not be

2002-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80325
	* gnome-settings-keyboard.c (apply_settings) : although we may not be
	  able to support the autorepeat rate setting we can enable/disable
	  autorepeat.